--- a/_layouts/bio.html
+++ b/_layouts/bio.html
@@ -4,13 +4,15 @@ layout: default
 
 {% include header.html %}
 
-<article class="cf">
+<article class="cf bio">
   <div class="fl w-100 w-50-ns bg-light-gray mr4">
     <img class="w-100" src="{{ site.baseurl }}/images/{{ page.image }}" alt="{{ page.bio-name }}">
   </div>
   <div class="fl w-100 w-40-ns ph2">
     <h1 class="f-head f-head-ns">{{ page.bio-name }}</h1>
     <h2 class="f3 f-sub-ns fw1 mt1 mb3 i">{{ page.bio-title }}</h1>
-    <p>{{ content }}</p>
+      <div class="bio-content">
+       <p>{{ content }}</p>
+      </div>
   </div>
 </article>
