Change Rupert's bio image.

--- a/_layouts/bio.html
+++ b/_layouts/bio.html
@@ -6,7 +6,7 @@ layout: default
 
 <article class="cf bio">
   <div class="fl w-100 w-50-ns bg-light-gray mr4">
-    <img class="w-100" src="{{ site.baseurl }}/images/{{ page.image }}" alt="{{ page.bio-name }}">
+    <img class="w-100" src="{{ site.baseurl }}/{{ page.image }}" alt="{{ page.bio-name }}">
   </div>
   <div class="fl w-100 w-40-ns ph2">
     <h1 class="f-head f-head-ns">{{ page.bio-name }}</h1>
